--- a/ToursimWebsite1/src/app/home/home.component.html
+++ b/ToursimWebsite1/src/app/home/home.component.html
@@ -137,7 +137,7 @@
     >
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="assets/1e.jpg" />
+          <img src="https://drive.google.com/uc?export=view&id=1J8g_WIdS46bEmL-IaO93t0a-LYFsv8_m" />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
