--- a/app1/src/app/core/footer/footer.component.html
+++ b/app1/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section class="footer" style="background: url(assets/majestic-pyramid-landscape-ancient-ruins-sphinx-sculpture-generated-by-ai.jpg);">
+<section class="footer" style="background: url(https://drive.google.com/uc?export=view&id=16xJ1lgj6M1nWwg0E_MIRdn25Ckzbz5Lb);">
     <div class="box-container">
         <div class="box">
             <h3>quick links</h3>
