--- a/app1/src/app/home/home.component.html
+++ b/app1/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                 rgba(255, 255, 255, 0.5),
                 rgba(255, 255, 255, 0.5)
               ),
-              url('/assets/female-abu-simbel-temple-southern-egypt-lake-nasser.jpg');
+              url('https://drive.google.com/uc?export=view&id=1KPjrSwL_CW6FgMf4qTmqVOS59CPaNGDf');
           "
         >
           <div class="content">
@@ -34,7 +34,7 @@
                 rgba(255, 255, 255, 0.5),
                 rgba(255, 255, 255, 0.5)
               ),
-              url(assets/camels-walking-each-other-diani-beach-kenya.jpg);
+              url(https://drive.google.com/uc?export=view&id=1OZtR_v16PLi51Cw5jpkIe4lxJeHQEzzd);
           "
         >
           <div class="content">
@@ -58,7 +58,7 @@
                 rgba(255, 255, 255, 0.5),
                 rgba(255, 255, 255, 0.5)
               ),
-              url(assets/fishing-boats-water-sea-with-beautiful-clear-blue-sky.jpg);
+              url(https://drive.google.com/uc?export=view&id=1dGcpYQUYXYg7zpZRRAErznJneT2DFSgT);
           "
         >
           <div class="content">
@@ -82,7 +82,7 @@
                 rgba(255, 255, 255, 0.5),
                 rgba(255, 255, 255, 0.5)
               ),
-              url(assets/male-small-rowboat-middle-beautiful-sea-with-sun-shining.jpg);
+              url(https://drive.google.com/uc?export=view&id=1_FjwGkWlus44auoiaBWtxn3syALBSuXs);
           "
         >
           <div class="content">
@@ -106,7 +106,7 @@
                 rgba(255, 255, 255, 0.5),
                 rgba(255, 255, 255, 0.5)
               ),
-              url(assets/PortSaid-166-1024x682.jpg);
+              url(https://drive.google.com/uc?export=view&id=1SjLd8aEC7TwBPVSR4R4qAyZCkIcNGAfl);
           "
         >
           <div class="content">
@@ -137,7 +137,7 @@
     >
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="assets/1e.jpg" />
+          <img src="https://drive.google.com/uc?export=view&id=1J8g_WIdS46bEmL-IaO93t0a-LYFsv8_m" />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
@@ -154,7 +154,7 @@
 
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="assets/caption.jpg" />
+          <img src="https://drive.google.com/uc?export=view&id=1JFzmFFOFXB7Xua1WZ33L_2_l8wAZCZfV" />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
@@ -171,7 +171,7 @@
 
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="assets/b7.jpg" />
+          <img src="https://drive.google.com/uc?export=view&id=1PUBC-vs1gxd4x7mBSw6L82VrivIXosIq" />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
@@ -188,7 +188,7 @@
 
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="assets/b7.jpg" />
+          <img src="https://drive.google.com/uc?export=view&id=1PUBC-vs1gxd4x7mBSw6L82VrivIXosIq" />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
