--- a/app1/src/app/agency/agency/agency.component.scss
+++ b/app1/src/app/agency/agency/agency.component.scss
@@ -1,13 +1,13 @@
-p-card{
-    margin-bottom: 4em;
+p-card {
+  margin-bottom: 4em;
 }
-.container{
-    display:flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding-top: 10em;
-   background-image:url("/assets/agency.jpg");
-   background-size: cover;
-    width: 100%  !important;
-    max-width: 100% !important;
+.container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-top: 10em;
+  background-image: url("https://drive.google.com/uc?export=view&id=1bnQGDNdjiCUtk-lSEumUkNvTcf-p5Fn_");
+  background-size: cover;
+  width: 100% !important;
+  max-width: 100% !important;
 }
