--- a/app1/src/app/contact-us/contact-us.component.scss
+++ b/app1/src/app/contact-us/contact-us.component.scss
@@ -1,6 +1,6 @@
 .contactus{
     padding-top: 10em;
-    background: url("/assets/contact.jpg");
+    background: url("https://drive.google.com/uc?export=view&id=1cP6chXOhh8NEQ771DuW57xEe9iMB-6E0");
     background-size: cover;
     font-size:x-large;
     color: white;
@@ -9,6 +9,7 @@
     font-weight: bold;
     padding-bottom: 5em;
     background-position-x: 100%;
+
 }
 i{
     font-size: x-large;
