--- a/app1/src/styles.scss
+++ b/app1/src/styles.scss
@@ -37,3 +37,6 @@ html {
     background-color: black;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
