--- a/app1/src/app/core/footer/footer.component.html
+++ b/app1/src/app/core/footer/footer.component.html
@@ -2,11 +2,11 @@
     <div class="box-container">
         <div class="box">
             <h3>quick links</h3>
-            <a routerLink="/home" routerLinkActive="active">Home </a>  &nbsp;
-           <a routerLink="/city" routerLinkActive="active">City</a>&nbsp;
-            <a routerLink="/agency" routerLinkActive="active">Agency</a>&nbsp;
-          <a routerLink="/aboutUs" routerLinkActive="active">about us</a>&nbsp;
-          <a routerLink="/contactUs"routerLinkActive="active" >contact us</a>&nbsp;
+            <a routerLink="/home" routerLinkActive="active">Home </a>  
+           <a routerLink="/city" routerLinkActive="active">City</a>
+            <a routerLink="/agency" routerLinkActive="active">Agency</a>
+          <a routerLink="/aboutUs" routerLinkActive="active">about us</a>
+          <a routerLink="/contactUs"routerLinkActive="active" >contact us</a>
         </div>
         <div class="box">
             <h3>extra links</h3>
