--- a/app1/src/app/home/home.component.html
+++ b/app1/src/app/home/home.component.html
@@ -15,7 +15,7 @@
         >
           <div class="content">
             <span>Luxor</span>
-            <h3>exploring</h3>
+            <h3 class="marginButton">exploring</h3>
             <p-button
               routerLink="/city/Dahab"
               label="Discover"
@@ -39,7 +39,7 @@
         >
           <div class="content">
             <span>Dahab</span>
-            <h3>Exploring</h3>
+            <h3 class="marginButton">Exploring</h3>
             <p-button
               routerLink="/city/Dahab"
               label="Discover"
@@ -63,7 +63,7 @@
         >
           <div class="content">
             <span>Alexandria</span>
-            <h3>Exploring</h3>
+            <h3 class="marginButton">Exploring</h3>
             <p-button
               routerLink="/city/Dahab"
               label="Discover"
@@ -87,7 +87,7 @@
         >
           <div class="content">
             <span>Fayoum</span>
-            <h3>Exploring</h3>
+            <h3 class="marginButton">Exploring</h3>
             <p-button
               routerLink="/city/Dahab"
               label="Discover"
@@ -111,8 +111,12 @@
         >
           <div class="content">
             <span>PortSaid</span>
-            <h3>Exploring</h3>
-            <a routerLink="/city/PortSaid">Discover </a>
+            <h3 class="marginButton">Exploring</h3>
+            <p-button
+            routerLink="/city/PortSaid"
+            label="Discover"
+            styleClass="discover-button p-button-lg p-button-rounded p-button-secondary"
+          ></p-button>
           </div>
         </div>
       </swiper-slide>
