--- a/app1/src/app/home/home.component.scss
+++ b/app1/src/app/home/home.component.scss
@@ -166,3 +166,6 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 :host ::ng-deep .p-button {
   font-size: 2rem;
 }
+.marginButton{
+  margin-bottom: 1.5em;
+}
