--- a/app1/src/app/home/home.component.html
+++ b/app1/src/app/home/home.component.html
@@ -1,4 +1,9 @@
 <section class="home" id="home">
+  <div class="message">
+    <h1>A good traveller</h1>
+    <h3>Has no fixed plans and is not intent on arriving</h3>
+  </div>
+  <hr />
   <div class="swiper home-slider">
     <swiper-container id="swiper" class="swiper-wrapper">
       <swiper-slide class="swiper-slide">
@@ -7,8 +12,8 @@
           style="
             background: linear-gradient(
                 0deg,
-                rgba(255, 255, 255, 0.5),
-                rgba(255, 255, 255, 0.5)
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)
               ),
               url('https://drive.google.com/uc?export=view&id=1KPjrSwL_CW6FgMf4qTmqVOS59CPaNGDf');
           "
@@ -31,8 +36,8 @@
           style="
             background: linear-gradient(
                 0deg,
-                rgba(255, 255, 255, 0.5),
-                rgba(255, 255, 255, 0.5)
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)
               ),
               url(https://drive.google.com/uc?export=view&id=1OZtR_v16PLi51Cw5jpkIe4lxJeHQEzzd);
           "
@@ -55,8 +60,8 @@
           style="
             background: linear-gradient(
                 0deg,
-                rgba(255, 255, 255, 0.5),
-                rgba(255, 255, 255, 0.5)
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)
               ),
               url(https://drive.google.com/uc?export=view&id=1dGcpYQUYXYg7zpZRRAErznJneT2DFSgT);
           "
@@ -79,8 +84,8 @@
           style="
             background: linear-gradient(
                 0deg,
-                rgba(255, 255, 255, 0.5),
-                rgba(255, 255, 255, 0.5)
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)
               ),
               url(https://drive.google.com/uc?export=view&id=1_FjwGkWlus44auoiaBWtxn3syALBSuXs);
           "
@@ -103,8 +108,8 @@
           style="
             background: linear-gradient(
                 0deg,
-                rgba(255, 255, 255, 0.5),
-                rgba(255, 255, 255, 0.5)
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)
               ),
               url(https://drive.google.com/uc?export=view&id=1SjLd8aEC7TwBPVSR4R4qAyZCkIcNGAfl);
           "
@@ -113,17 +118,17 @@
             <span>PortSaid</span>
             <h3 class="marginButton">Exploring</h3>
             <p-button
-            routerLink="/city/PortSaid"
-            label="Discover"
-            styleClass="discover-button p-button-lg p-button-rounded p-button-secondary"
-          ></p-button>
+              routerLink="/city/PortSaid"
+              label="Discover"
+              styleClass="discover-button p-button-lg p-button-rounded p-button-secondary"
+            ></p-button>
           </div>
         </div>
       </swiper-slide>
     </swiper-container>
   </div>
 </section>
-
+<hr />
 <section class="landmark" id="show">
   <h1 class="heading">Our LandMarks</h1>
   <div class="landmark-slider">
@@ -141,7 +146,9 @@
     >
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="https://drive.google.com/uc?export=view&id=1J8g_WIdS46bEmL-IaO93t0a-LYFsv8_m" />
+          <img
+            src="https://drive.google.com/uc?export=view&id=1J8g_WIdS46bEmL-IaO93t0a-LYFsv8_m"
+          />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
@@ -158,7 +165,9 @@
 
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="https://drive.google.com/uc?export=view&id=1JFzmFFOFXB7Xua1WZ33L_2_l8wAZCZfV" />
+          <img
+            src="https://drive.google.com/uc?export=view&id=1JFzmFFOFXB7Xua1WZ33L_2_l8wAZCZfV"
+          />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
@@ -175,7 +184,9 @@
 
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="https://drive.google.com/uc?export=view&id=1PUBC-vs1gxd4x7mBSw6L82VrivIXosIq" />
+          <img
+            src="https://drive.google.com/uc?export=view&id=1PUBC-vs1gxd4x7mBSw6L82VrivIXosIq"
+          />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
@@ -192,7 +203,9 @@
 
       <swiper-slide class="slide-landmark">
         <div class="image">
-          <img src="https://drive.google.com/uc?export=view&id=1PUBC-vs1gxd4x7mBSw6L82VrivIXosIq" />
+          <img
+            src="https://drive.google.com/uc?export=view&id=1PUBC-vs1gxd4x7mBSw6L82VrivIXosIq"
+          />
         </div>
         <div class="content">
           <h3>Blue Hole</h3>
