--- a/app1/src/app/core/header/header.component.html
+++ b/app1/src/app/core/header/header.component.html
@@ -2,18 +2,17 @@
   <a class="logo"> Escape </a>
 
   <nav class="navbar">
-    <div id="nav-close" class="fas fa-times"></div>
-    <a routerLink="/home" routerLinkActive="active">Home </a> &nbsp;
-    <a routerLink="/trip" routerLinkActive="active">Trips </a> &nbsp;
-    <a routerLink="/cities" routerLinkActive="active">City</a>&nbsp;
-    <a routerLink="/agency" routerLinkActive="active">Agency</a>&nbsp;
-    <a routerLink="/aboutUs" routerLinkActive="active">about us</a>&nbsp;
-    <a routerLink="/contactUs" routerLinkActive="active">contact us</a>&nbsp;
+    <!-- <div id="nav-close" class="fas fa-times"></div> -->
+    <a routerLink="/home" routerLinkActive="active">Home </a>
+    <a routerLink="/trip" routerLinkActive="active">Trips </a>
+    <a routerLink="/cities" routerLinkActive="active">City</a>
+    <a routerLink="/agency" routerLinkActive="active">Agency</a>
+    <a routerLink="/aboutUs" routerLinkActive="active">about us</a>
+    <a routerLink="/contactUs" routerLinkActive="active">contact us</a>
   </nav>
 
   <div class="icons">
     <div (click)="showSearchForm()" class="nav-item pi pi-search"></div>
-    <a class="nav-item pi pi-shopping-cart"></a>
     <a
       id="dropdownMenuButton1"
       data-bs-toggle="dropdown"
@@ -22,20 +21,12 @@
     ></a>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <li>
-        <a
-          *ngIf="!isAuthenticated"
-          class="dropdown-item"
-          routerLink="/signIn"
-        >
+        <a *ngIf="!isAuthenticated" class="dropdown-item" routerLink="/signIn">
           Login
         </a>
       </li>
       <li>
-        <a
-          *ngIf="!isAuthenticated"
-          class="dropdown-item"
-          routerLink="/signup"
-        >
+        <a *ngIf="!isAuthenticated" class="dropdown-item" routerLink="/signup">
           Register
         </a>
       </li>
