--- a/app1/src/app/core/header/header.component.scss
+++ b/app1/src/app/core/header/header.component.scss
@@ -69,7 +69,7 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -83,6 +83,7 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     margin-right: auto;
     color: rgb(255, 252, 252);
     font-weight: bolder;
+    text-decoration: none;
   }
 }
 
@@ -91,6 +92,14 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     margin-left: 2rem;
     font-size: 2rem;
     color: rgb(252, 252, 252);
+    background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.4),
+      rgba(255, 255, 255, 0.4)
+    );
+    border-radius: 10px;
+    padding: 0.5em;
+    text-decoration: none;
     // border: black;
     // border-radius: 2rem;
     //border-color: black;
@@ -99,7 +108,7 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     // padding: 6px;
 
     &:hover {
-      color: $green;
+      color: #472d2d;
     }
   }
 }
@@ -112,7 +121,7 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   color: $white;
 
   &:hover {
-    color: $green;
+    color: #472d2d;
   }
 
   #menu-btn {
@@ -156,30 +165,30 @@ $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   }
 }
 
-@media (max-width: 768px) {
-  .header {
-    #menu-btn {
-      display: inline-block;
-    }
+// @media (max-width: 768px) {
+//   .header {
+//     #menu-btn {
+//       display: inline-block;
+//     }
 
-    .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      background: $white;
-      z-index: 1000;
-      width: 35rem;
-      height: 100%;
-      box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
-      display: flex;
-      flex-flow: column;
-      align-items: center;
-      justify-content: center;
+//     .navbar {
+//       position: fixed;
+//       top: 0;
+//       left: 0;
+//       background: $white;
+//       z-index: 1000;
+//       width: 35rem;
+//       height: 100%;
+//       box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
+//       display: flex;
+//       flex-flow: column;
+//       align-items: center;
+//       justify-content: center;
 
-      a {
-        margin: 1rem 0;
-        font-size: 3rem;
-      }
-    }
-  }
-}
+//       a {
+//         margin: 1rem 0;
+//         font-size: 3rem;
+//       }
+//     }
+//   }
+// }
